--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -5,13 +5,14 @@
 }
 
 .post-card {
-
     width: 500px;
-    border: 2px solid green;
+    max-height: 600px;
+    border: 7px solid #B9ED90;
+    border-radius: 40px;
     padding: 20px;
     margin: 25px;
+    overflow: hidden;
     box-sizing: border-box;
     background-clip: padding-box;
     box-shadow: 0 0 20px gray;
-
 }
