--- a/src/styles/SettingPage.css
+++ b/src/styles/SettingPage.css
@@ -61,7 +61,7 @@
   border-radius: 5px;
 }
 
-button {
+.settingButton button {
   font-family: Pretendard-Regular;
   width: 50%;
   margin-left: 100px;
@@ -74,7 +74,7 @@ button {
   font-size: 16px;
 }
 
-button:hover {
+.settingButton button:hover {
   background-color: #7DCCAC;
 }
 
