--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -27,7 +27,13 @@
     box-sizing: border-box;
 }
 
-#new-post-create{
+
+/* #new-post-create{
     float: right;
     margin-right: 15px;
 }
+
+#new-post-create a{
+    text-decoration: none;
+    color: black;
+} */
