--- a/src/styles/IntroContents.css
+++ b/src/styles/IntroContents.css
@@ -10,6 +10,11 @@
   padding: 2.6em 0px;
 
   box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .contents-title h1 {
   font-weight: 700;
