--- a/src/styles/IntroServices.css
+++ b/src/styles/IntroServices.css
@@ -10,6 +10,7 @@
   font-size: 3.5em;
   font-weight: 700;
   margin-bottom: 100px;
+  text-align: center;
 }
 .intro-services p {
   font-weight: 400;
