--- a/src/styles/Calendar.css
+++ b/src/styles/Calendar.css
@@ -1,9 +1,10 @@
 .container{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap:wrap;
     width: 350px;
     height: 100vh;
     justify-content: center;
+    align-content: flex-start;
     border-radius: 20px;
     margin: 15px 15px 15px 0px;
     background-color: #E7F998;
@@ -11,10 +12,31 @@
 .Calendar{
     font-family: "Montserrat";
     width: 100%;
-    height: 20%;
-    margin: 50px 10px;
+    height: fit-content;
+    margin: 40px 10px 10px 10px;
 }
 
+.emotion-section{
+  width: 100%;
+  margin: 10px;
+  
+  button{
+    width: 60px;
+    height: 60px;
+    border: none;
+    border-radius: 50px;
+    background-color: #7DCCAC;
+  }
+}
+
+.diary-section{
+  margin: 10px;
+
+  width: 100%;
+}
+
+/* ------------------ */
+/* react-calendar css */
 .react-calendar{
     width: 100%;
     border: none;
@@ -110,4 +132,6 @@ border-radius: 50px;
     background-color: #E7F998;
     justify-content: center;
 }
+
+
 
