--- a/src/styles/Contents.css
+++ b/src/styles/Contents.css
@@ -1,9 +1,9 @@
 .contents {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    width: max;
-    margin-left: 150px;
-  }
-  
+  font-family: 'Pretendard-Regular';
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  max-width: 1920px;
+  margin: 0 auto;
+}
