--- a/src/styles/ContentsView.css
+++ b/src/styles/ContentsView.css
@@ -1,34 +1,34 @@
 .contents-view {
-    padding: 20px;
-    background: rgba(0, 0, 0, 0.5); /* 배경 흐리게 */
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .contents-view .content {
-    background-color: rgba(252, 248, 227, 0.8);
-    padding: 20px;
-    border-radius: 8px;
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: left;
-  }
-  
-  .contents-view video {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-  }
-  
-  .back-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 2em;
-    cursor: pointer;
-  }
-  
+  padding: 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.contents-view .content {
+  background-color: rgba(252, 248, 227, 0.8);
+  padding: 20px;
+  border-radius: 8px;
+  width: 100%;
+  text-align: left;
+}
+
+.contents-view video {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.back-button2 {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 2em;
+  cursor: pointer;
+}
