--- a/src/styles/SubCategory.css
+++ b/src/styles/SubCategory.css
@@ -1,47 +1,54 @@
 .sub-category-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
-    width: 100%;
-    padding: 20px;
-    position: relative;
-  }
-  
-  .sub-category-item {
-    background-color: rgba(217, 237, 247, 0.8);
-    padding: 20px;
-    cursor: pointer;
-    border-radius: 8px;
-    transition: transform 0.2s;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .sub-category-item:hover {
-    transform: scale(1.05);
-  }
-  
-  .sub-category-image {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-  }
-  
-  .sub-category-name {
-    margin-top: 10px;
-    font-size: 1.2em;
-    font-weight: bold;
-  }
-  
-  .back-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 2em;
-    cursor: pointer;
-  }
-  
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+  width: 100%;
+  padding: 20px;
+  position: relative;
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.sub-category-header {
+  position: relative;
+}
+
+.sub-category-item {
+  background-color: rgba(217, 237, 247, 0.8);
+  padding: 20px;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: transform 0.2s;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sub-category-item:hover {
+  transform: scale(1.05);
+}
+
+.sub-category-image {
+  width: 100%;
+  height: 300px; /* 이미지 높이를 고정 */
+  object-fit: cover; /* 이미지를 사각형을 꽉 채우도록 조정 */
+  border-radius: 8px;
+}
+
+.sub-category-name {
+  margin-top: 10px;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.back-button {
+  position: absolute;
+  margin-left: 100px;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 2em;
+  cursor: pointer;
+}
