--- a/src/styles/new.css
+++ b/src/styles/new.css
@@ -14,7 +14,8 @@
     border-radius: 15px;
     padding-left: 30px;
     background-color: #E7F998;
-    align-items:center;
+    align-items: center;
+    text-align: left;
 }
 
 #new-back{
