--- a/src/styles/detail.css
+++ b/src/styles/detail.css
@@ -25,12 +25,10 @@
     font-size: large;
 }
 
-
 #post-back{
     padding-left: 20px;
     justify-content: flex-start;
 }
-
 
 .button-right{
     margin-left:auto;
@@ -48,7 +46,6 @@
     font-size: 19px;
     overflow: hidden;
     resize: none;
-    display: block;
     border-right: 15px;
     text-align: left;
 }
@@ -57,8 +54,8 @@
     display: grid;
     border: 5px solid #B9ED90;
     border-radius: 18px;
-    margin:0% 5% 5% 110px;
-    height: 600px;
+    margin:0% 5% 10px 110px;
+    height: 480px;
     box-sizing: border-box;
     background-clip: padding-box; 
 }
@@ -74,4 +71,26 @@
 
 #detail-submit:hover{
     background-color:#7DCCAC;
+}
+
+
+.detail-comment-bar{
+    display:flex;
+    height: 40px;
+    margin:0% 6% 2% 119px ;
+    border-radius: 15px;
+    padding-left: 30px;
+    background-color: none;
+    align-items: center;
+    background-color: #B9ED90;
+}
+
+.detail-comment-bar p{
+    width: 90%;
+    font-size: large;
+    text-align: left;
+}
+
+.detail-comment{
+
 }
