--- a/src/styles/Category.css
+++ b/src/styles/Category.css
@@ -24,8 +24,8 @@
 
 .category-image {
   width: 100%;
-  height: 300px; /* 이미지 높이를 고정 */
-  object-fit: cover; /* 이미지를 사각형을 꽉 채우도록 조정 */
+  height: 300px;
+  object-fit: cover;
   border-radius: 8px;
 }
 
