--- a/src/styles/ContentsView.css
+++ b/src/styles/ContentsView.css
@@ -23,12 +23,22 @@
   border-radius: 8px;
 }
 
+.contents-view h2 {
+  margin-bottom: 50px;
+  margin-top: -0px;
+}
+
 .back-button2 {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 5px;
+  right: -5px;
   background: none;
   border: none;
   font-size: 2em;
   cursor: pointer;
+}
+
+.back-button2:hover {
+  background-color: #007BFF;
+  border-radius: 8px;
 }
