--- a/src/styles/SubCategory.css
+++ b/src/styles/SubCategory.css
@@ -9,9 +9,6 @@
   margin: 0 auto;
 }
 
-.sub-category-header {
-  position: relative;
-}
 
 .sub-category-item {
   background-color: rgba(217, 237, 247, 0.8);
@@ -31,8 +28,8 @@
 
 .sub-category-image {
   width: 100%;
-  height: 300px; /* 이미지 높이를 고정 */
-  object-fit: cover; /* 이미지를 사각형을 꽉 채우도록 조정 */
+  height: 300px;
+  object-fit: cover;
   border-radius: 8px;
 }
 
@@ -42,13 +39,19 @@
   font-weight: bold;
 }
 
-.back-button {
+
+.back-button1 {
   position: absolute;
   margin-left: 100px;
-  top: 10px;
-  right: 10px;
+  top: 25px;
+  right: 571px;
   background: none;
   border: none;
   font-size: 2em;
   cursor: pointer;
+}
+
+.back-button1:hover {
+  background-color: #007BFF;
+  border-radius: 8px;
 }
