--- a/src/styles/SignUpForm.css
+++ b/src/styles/SignUpForm.css
@@ -54,8 +54,10 @@
 }
 .id-box {
   display: flex;
-  justify-content: space-between;
+  row-gap: 10px;
   align-items: flex-end;
+
+  position: relative;
 }
 .signup-btn {
   font-size: 1.5rem;
@@ -65,4 +67,7 @@
 .check-btn {
   font-size: 1.2rem;
   padding: 0.2em 0.5em;
+
+  position: absolute;
+  right: 0;
 }
