--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -16,7 +16,9 @@
     box-sizing: border-box;
     background-clip: padding-box;    
 }
-
+.post-card:hover{
+    cursor: pointer;
+}
 .guide-card{
     width: 500px;
     max-height: 230px;
