edit page / save layout

--- a/src/styles/edit.css
+++ b/src/styles/edit.css
@@ -33,3 +33,28 @@
 .edit-title-bar input:focus{
     outline: none;
 }
+
+.edit-textarea textarea{
+    margin: 10px 40px 0 0 ;
+    padding-left: 15px;
+    display:flex;
+    width: 97%;
+    border:none;
+    border-radius: 18px;
+    outline: none;
+    font-size: 19px;
+    resize: none;
+    display: block;
+    border-right: 15px;
+    height: 530px;
+}
+
+.edit-textarea {
+    display: grid;
+    border: 5px solid #B9ED90;
+    border-radius: 18px;
+    margin:0% 5% 5% 110px;
+    height: 600px;
+    box-sizing: border-box;
+    background-clip: padding-box; 
+}
