--- a/src/styles/CheckList.css
+++ b/src/styles/CheckList.css
@@ -14,7 +14,7 @@
 }
 
 .list-wrapper-wide{
-  background-color: blue;
+  /* background-color: blue; */
   display: flex;
   flex-wrap: wrap;
   width: 100%;
