--- a/src/styles/SettingPage.css
+++ b/src/styles/SettingPage.css
@@ -6,13 +6,18 @@
 }
 
 .setting-page {
+  position: sticky;
   margin-top: 100px;
+  left: 550px;
   font-family: Pretendard-Regular;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
+  width: calc(100% - 40px); 
+  max-width: 800px;
 }
+
 
 .setting-account {
   background-color: #f5f5f5;
