--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,11 +1,12 @@
 .Header{
     display: flex;
     width: 80px;
-    height: 100vh;
+    height: 95vh;
     justify-content: center;
     border-radius: 20px;
     margin: 15px;
     background-color: #7DCCAC;
+    position: fixed;
 }
 
 .logo-icon{
@@ -20,7 +21,7 @@
 }
 
 .end-icon{
-    margin-top: 290px;
+    margin-top: 250px;
 }
 
 .dropdown-content{
