--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,11 +1,12 @@
 .Header{
     display: flex;
     width: 80px;
-    height: 100vh;
+    height: 95vh;
     justify-content: center;
     border-radius: 20px;
     margin: 15px;
     background-color: #7DCCAC;
+    position: fixed;
 }
 
 .logo-icon{
@@ -16,21 +17,23 @@
     height: 70px;
 }
 .mid-icon{
+    width: 100px;
     margin: 20px 0px;
 }
 
 .end-icon{
-    margin-top: 290px;
+    margin-top: 250px;
 }
 
 .dropdown-content{
     display : none;
-    margin: -45px 75px;
+    margin: -45px 90px;
     position : absolute;  
     z-index : 1; 
     font-weight: 500;
-    background-color: #7dccaca2;
-    width: 100px; 
+    background-color: #7dccacea;
+    width: 100px;
+     
 }
 .dropdown-content p{
     display : block;
@@ -39,13 +42,14 @@
     text-decoration : none;
     color : rgb(0, 0, 0);
     font-size: 13px;
-    padding : 12px 0px;
-  }
+    padding : 15px 0px;
+}
+
+.mid-icon:hover .dropdown-content{
+    display: block;
+}
 
 .dropdown-content p:hover{
     width: 100px;
-    background-color: #fffafdb5;
-}
-.mid-icon:hover .dropdown-content{
-    display: block;
+    background-color: #fffafdea;
 }
