--- a/src/styles/Paragraph.css
+++ b/src/styles/Paragraph.css
@@ -1,3 +1,25 @@
 .Paragraph{
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 20px;
+    margin: 15px 15px 15px 0px;
+    border: 3px solid #E7F998;
+    padding: 50px;
+    width: 87%;
+}
+
+.para{
+    font-family: "Montserrat";
+    margin-bottom: 10px;
+    font-weight: 500;
+}
+
+.ko{
+    margin-bottom: 20px;
+    color: gray;
+    font-family: "Pretendard-Regular";
+}
+.writer{
+    margin-bottom: 0px;
 }
