--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -6,7 +6,8 @@
   font-style: normal;
 }
 .intro {
-  width: 100vh;
-  width: 80vw;
+  height: 100%;
+  width: 80%;
   margin: auto;
+  position: relative;
 }
