--- a/src/styles/detail.css
+++ b/src/styles/detail.css
@@ -140,3 +140,14 @@
     background-color: #7DCCAC;
     cursor: pointer;
 }
+
+.detail-comment-bar button{
+    cursor: pointer;
+    background-color: #B9ED90;
+    border: 3px solid #B9ED90;
+    border-radius: 20px;
+    font-size: x-large;
+    display: flex;
+    align-items: center;
+}
+
