--- a/src/styles/IntroContents.css
+++ b/src/styles/IntroContents.css
@@ -7,9 +7,7 @@
   color: #3c3b3b;
   width: 100%;
 
-  padding: 2.6em 0px;
-
-  box-sizing: border-box;
+  padding: 2.6em 0;
 
   display: flex;
   flex-direction: column;
@@ -18,18 +16,19 @@
 }
 .contents-title h1 {
   font-weight: 700;
-  font-size: 3em;
+  font-size: 2.5vw;
   margin-bottom: 1em;
 }
 .contents-title span {
   display: block;
   margin-bottom: 0.2em;
+  font-size: 1.2vw;
 }
 .contents-content {
   display: flex;
   justify-content: center;
-  margin: 4em 2em;
-  box-sizing: border-box;
+  width: 100%;
+  margin-top: 4em;
 }
 .contents-content section {
   display: flex;
@@ -38,17 +37,34 @@
 }
 .contents-content section span {
   font-weight: 700;
-  font-size: 3.5em;
+  font-size: 2.5vw;
   margin-bottom: 0.3em;
 }
 .contents-content section span:nth-child(2) {
-  margin-bottom: 1em;
+  margin-bottom: 1.1em;
 }
 .contents-content section p {
+  font-size: 0.9vw;
   margin-bottom: 0.2em;
 }
 .contents-content img {
   width: 50%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+}
+@media (max-width: 1050px) {
+  .contents-content {
+    flex-direction: column;
+    align-items: center;
+  }
+  .contents-content img {
+    width: 60%;
+  }
+  .contents-content section {
+    width: 80%;
+    align-items: center;
+  }
+  .contents-content section p {
+    font-size: 1.5vw;
+  }
 }
