--- a/src/styles/IntroDiary.css
+++ b/src/styles/IntroDiary.css
@@ -1,6 +1,5 @@
 .intro-diary {
   margin-bottom: 20rem;
-
   font-family: 'Pretendard-Regular';
 }
 .diary-title {
@@ -8,9 +7,7 @@
   color: white;
   width: 100%;
 
-  padding: 2.6em 0px;
-
-  box-sizing: border-box;
+  padding: 2.6em 0;
 
   display: flex;
   flex-direction: column;
@@ -19,14 +16,17 @@
 }
 .diary-title h1 {
   font-weight: 700;
-  font-size: 3em;
+  font-size: 2.5vw;
   margin-bottom: 1em;
+}
+.diary-title span {
+  font-size: 1.2vw;
 }
 .diary-content {
   display: flex;
   justify-content: center;
-  margin: 4em 2em;
-  box-sizing: border-box;
+  width: 100%;
+  margin-top: 4em;
 }
 .diary-content section {
   display: flex;
@@ -35,17 +35,39 @@
 }
 .diary-content section span {
   font-weight: 700;
-  font-size: 3.5em;
+  font-size: 2.5vw;
   margin-bottom: 0.3em;
 }
 .diary-content section span:nth-child(3) {
   margin-bottom: 1.1em;
 }
 .diary-content section p {
+  font-size: 0.9vw;
   margin-bottom: 0.2em;
 }
 .diary-content img {
   width: 50%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+}
+@media (max-width: 1050px) {
+  .intro-diary {
+    margin-bottom: 10rem;
+  }
+  .diary-content {
+    flex-direction: column;
+    align-items: center;
+  }
+  .diary-content img {
+    order: 1;
+    width: 60%;
+  }
+  .diary-content section {
+    order: 2;
+    width: 80%;
+    align-items: center;
+  }
+  .diary-content section p {
+    font-size: 1.5vw;
+  }
 }
