--- a/src/styles/IntroMain.css
+++ b/src/styles/IntroMain.css
@@ -1,31 +1,33 @@
 .intro-main {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 50px 0 20px;
-  box-sizing: border-box;
+  margin-top: 13rem;
+  padding: 3em 5rem 0 0;
 
+  display: flex;
+  align-items: center;
+
+  box-sizing: border-box;
   background-color: #eaeaea;
 }
 .intro-main img {
-  width: 50%;
+  width: 45%;
   height: 80%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .intro-text {
+  width: 55%;
+
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-left: 1em;
 
   font-family: 'Pretendard-Regular';
-  font-size: 2em;
-  font-weight: 400;
 
   position: relative;
 }
 .intro-text span {
   font-weight: 700;
-  font-size: 1.6em;
+  font-size: 2.5vw;
   margin-bottom: 2em;
 }
 .intro-text button {
@@ -33,7 +35,7 @@
   right: 0;
   bottom: 0;
 
-  font-size: 1em;
+  font-size: 2vw;
   font-weight: 600;
 
   border-radius: 20px;
@@ -42,12 +44,26 @@
   background-color: #7dccac;
   padding: 0.2em 0.4em;
 
-  width: 5em;
-  height: 2em;
+  transform: scale(1);
 }
 .intro-text button:hover {
   cursor: pointer;
-  width: 5.2em;
-  height: 2.2em;
-  transition: width height 1.2s ease-in-out;
+  transform: scale(1.1);
+  transition: scale 1.2s ease-in-out;
+}
+
+@media (max-width: 700px) {
+  .intro-main {
+    display: flex;
+    flex-direction: column;
+    padding-left: 3em;
+    box-sizing: border-box;
+  }
+  .intro-main img {
+    width: 60%;
+  }
+  .intro-text {
+    margin: 2em 0 2em 4em;
+    width: 80%;
+  }
 }
