--- a/src/styles/IntroServices.css
+++ b/src/styles/IntroServices.css
@@ -28,6 +28,19 @@
   margin: auto;
   padding: 1em 1em;
 }
+.service-link {
+  transform: scale(1);
+}
+.service-link:hover {
+  transform: scale(1.1);
+}
+.service-link:link {
+  text-decoration: none;
+}
+.service-link:visited,
+.service-link:active {
+  color: black;
+}
 .circle {
   border-radius: 50%;
   width: 11em;
@@ -44,6 +57,7 @@
   flex-direction: column;
   align-items: center;
 }
+
 .diary .circle {
   background-color: #7dccac;
 }
@@ -58,6 +72,7 @@
 .checklist .circle {
   background-color: #b9ed90;
 }
+
 .community {
   margin: auto;
   width: 45%;
