--- a/src/styles/Auth/SignUpForm.css
+++ b/src/styles/Auth/SignUpForm.css
@@ -24,8 +24,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  box-sizing: border-box;
 }
 .signup-form button {
   font-family: 'Pretendard-Regular';
@@ -38,8 +36,9 @@
   cursor: pointer;
 }
 .signup-form div {
+  background-color: azure;
   margin-bottom: 1.3em;
-  width: 60%;
+  width: 50%;
   display: flex;
   font-size: 1.2rem;
   border-bottom: 1px solid #7dccac;
@@ -74,4 +73,27 @@
 .signup-test {
   position: absolute;
   left: 0;
+}
+@media (max-width: 940px) {
+  .signup-form div {
+    width: 80%;
+    font-size: 1rem;
+  }
+  .signup-form div input {
+    width: 60%;
+  }
+  .pw-sure input {
+    width: 50%;
+  }
+  .signup-btn {
+    font-size: 1.2rem;
+  }
+  .check-btn {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 500px) and (max-width: 940px) {
+  .signup-btn {
+    width: 30%;
+  }
 }
