--- a/src/styles/Contents/Category.css
+++ b/src/styles/Contents/Category.css
@@ -1,7 +1,7 @@
 
 .category-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: 0.9fr 0.9fr;
   gap: 20px;
   width: 100%;
 }
