07/16 contents page react-player 적용

--- a/src/styles/Contents/SubCategory.css
+++ b/src/styles/Contents/SubCategory.css
@@ -1,6 +1,6 @@
 .sub-category-grid {
   display: grid;
-  grid-template-columns: 0.9fr 0.9fr;
+  grid-template-columns: 1fr 1fr;
   gap: 20px;
   width: 100%;
 }
@@ -23,7 +23,7 @@
 }
 
 .sub-category-image {
-  width: 100%;
+  width: 400px;
   height: 300px;
   object-fit: cover;
   border-radius: 8px;
