--- a/src/styles/Contents/ContentsView.css
+++ b/src/styles/Contents/ContentsView.css
@@ -17,16 +17,9 @@
 }
 
 
-.contents-view video {
-  width: 100%;
-  height: 600px;
-  object-fit: cover;
-  border-radius: 8px;
-}
-
 .contents-view h2 {
   margin-bottom: 50px;
-  margin-top: -0px;
+  margin-top: 0;
 }
 
 .back-button2 {
