--- a/src/styles/HomexDiary/Calendar.css
+++ b/src/styles/HomexDiary/Calendar.css
@@ -6,14 +6,15 @@
     justify-content: center;
     align-content: flex-start;
     border-radius: 20px;
-    margin: 15px 15px 15px 105px;
+    margin: 1% 1% 1% 7%;
+    /* margin: 15px 15px 15px 105px; */
     background-color: #E7F998;
 }
 .Calendar{
     font-family: "Montserrat";
     width: 100%;
     height: fit-content;
-    margin: 40px 10px 10px 10px;
+    margin: 10% 2% 2% 2%;
 }
 
 .emotion-section{
@@ -43,9 +44,9 @@
 }
 .react-calendar__navigation {
     text-align: start;
-    height: 50px;
+    height: 7vh;
     width: 100%;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 10px;
 
     button{
         border: none;
@@ -53,7 +54,7 @@
     }
     span {
       font-family: "Montserrat";
-      font-size: 24px;
+      font-size: 180%;
       font-weight: 700;
       color: #212A3E;
     }
@@ -72,9 +73,9 @@
 
   .react-calendar__month-view {
     border: 1px solid black;
-    padding: 10px 5px;
+    padding: 3% 1%;
     abbr {
-      font-size: 15px;
+      font-size: 120%;
       font-weight: 500;
     }
   }
@@ -83,7 +84,7 @@
     margin-bottom: 20px;
     abbr {
         text-decoration: none;
-        font-size: 15px;
+        font-size: 100%;
         font-weight: 700;
     }
   }
@@ -91,7 +92,8 @@
   .react-calendar__tile {
     font-family: "Montserrat";
     text-align: center;
-    height: 50px;
+    /* height: 50px; */
+    height: 7vh;
     margin-bottom: 5px;
     display: flex;
     flex-direction: column;
