--- a/src/styles/HomexDiary/CheckList/CheckItem.css
+++ b/src/styles/HomexDiary/CheckList/CheckItem.css
@@ -1,16 +1,16 @@
 .CheckItem{
     display: flex;
     align-items: baseline;
-    gap: 10px;
+    gap: 5%;
     width: 70%;
-    height: 30px;
-    padding: 17px 30px;
-    margin-bottom: 10px;
+    height: 30%;
+    padding: 3%;
+    margin-bottom: 5%;
     border-bottom: 1px solid rgba(0, 0, 0, 0.155);
     margin: 0 auto;
 
 }
 .content-col{
-    height: 50px;
+    height: 4vh;
     flex: 1;
     overflow: hidden;}
