--- a/src/styles/HomexDiary/DiaryEditor.css
+++ b/src/styles/HomexDiary/DiaryEditor.css
@@ -5,7 +5,7 @@
     height: 100vh;
     justify-content: center;
     border-radius: 20px;
-    margin: 15px 15px 15px 0px;
+    margin: 1% 1% 1% 7%;
     
 }
 .emotion-selector{
