--- a/src/styles/HomexDiary/Paragraph.css
+++ b/src/styles/HomexDiary/Paragraph.css
@@ -3,20 +3,21 @@
     flex-direction: column;
     justify-content: center;
     border-radius: 20px;
-    margin: 15px 15px 15px 0px;
+    margin: 1.5% 1.5% 1.5% 0px;
     border: 3px solid #E7F998;
-    padding: 50px;
+    padding: 4%;
     width: 87%;
+    height: 20%;
 }
 
 .para{
     font-family: "Montserrat";
-    margin-bottom: 10px;
+    margin-bottom: 3%;
     font-weight: 500;
 }
 
 .ko{
-    margin-bottom: 20px;
+    margin-bottom: 3%;
     color: gray;
     font-family: "Pretendard-Regular";
 }
