--- a/src/styles/HomexDiary/CheckList/CheckList.css
+++ b/src/styles/HomexDiary/CheckList/CheckList.css
@@ -23,5 +23,18 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    padding: 1% 5%;
+    padding: 0% 5% 3% 5%;
+}
+
+.button-section button{
+
+    width: 120%;
+    height: 5vh;
+    font-family: "Pretendard-Regular";
+    font-size: 2.3vh;
+    border: none;
+    border-radius: 20px;
+    background-color: #7dccac6f;
+
+    
 }
