--- a/src/styles/community/post.css
+++ b/src/styles/community/post.css
@@ -3,6 +3,7 @@
     grid-template-columns: repeat(auto-fill, minmax(490px, 1fr));
     grid-auto-flow: row;
     height: inherit;
+    margin-left: 7%;
 }
 
 .post-card {
