--- a/src/styles/Auth/Modal.css
+++ b/src/styles/Auth/Modal.css
@@ -25,7 +25,12 @@
 }
 .modal-text {
   margin-bottom: 1em;
+  font-family: 'Pretendard-Regular';
 }
 .modal-btn {
-  width: 20%;
+  width: 25%;
+  color: white;
+  border-style: none;
+  background-color: #7dccac;
+  font-family: 'Pretendard-Regular';
 }
