--- a/src/styles/Intros/IntroHeader.css
+++ b/src/styles/Intros/IntroHeader.css
@@ -19,20 +19,43 @@
   height: 100%;
   object-fit: contain;
 }
-.intro-header button {
-  background-color: white;
-  border-style: none;
+.intro-header-btns {
+  width: 70%;
+  display: flex;
+  justify-content: flex-end;
+}
+.intro-header-login {
   border-radius: 25px;
+  border-style: none;
   width: 5em;
   height: 3em;
-
+  cursor: pointer;
+  background-color: white;
   font-family: 'Pretendard-Regular';
   font-size: 1.7em;
   font-weight: 700;
-
-  position: absolute;
-  top: 3em;
-  right: 0.6em;
+}
+.intro-header-home {
+  border-radius: 25px;
+  border-style: none;
+  width: 5em;
+  height: 3em;
+  cursor: pointer;
+  background-color: white;
+  font-family: 'Pretendard-Regular';
+  font-size: 1.7em;
+  font-weight: 700;
+}
+.intro-header-logout {
+  border-radius: 25px;
+  border-style: none;
+  width: 5em;
+  height: 3em;
+  cursor: pointer;
+  background-color: white;
+  font-family: 'Pretendard-Regular';
+  font-size: 1.7em;
+  font-weight: 700;
 }
 .intro-header button:hover {
   background-color: #7dccac;
