--- a/src/styles/Ask/StateCheck.css
+++ b/src/styles/Ask/StateCheck.css
@@ -61,6 +61,7 @@
         outline: none;
     }
     textarea {
+        font-family: "Pretendard-Regular";
         height: 2vh;
         align-items: baseline;
         width: 70%;
