--- a/src/styles/HomexDiary/Calendar.css
+++ b/src/styles/HomexDiary/Calendar.css
@@ -7,8 +7,9 @@
     align-content: flex-start;
     border-radius: 20px;
     margin: 1% 1% 1% 7%;
-    /* margin: 15px 15px 15px 105px; */
-    background-color: #E7F998;
+    background-color: #F9f9f9;
+    /* 달력 그림자 */
+    box-shadow: 0px 0px 15px #7dccacd7; 
 }
 .Calendar{
     font-family: "Montserrat";
@@ -32,8 +33,8 @@
   height: 55px;
   border: none;
   border-radius: 50px;
-  background-color: #7DCCAC;
-  margin: 10px;
+  background-color: #7dccac;
+  margin: 15px;
 }
 
 /* ------------------ */
@@ -50,7 +51,7 @@
 
     button{
         border: none;
-        background-color: #E7F998;
+        background-color: #F9f9f9;
     }
     span {
       font-family: "Montserrat";
@@ -104,7 +105,7 @@
 
   .react-calendar__month-view__days__day{
     border: none;
-    background-color: #E7F998;
+    background-color: #F9f9f9;
   }
 /*hover, focus, 선택됐을 시 */
 .react-calendar__tile:enabled:hover,
@@ -131,7 +132,7 @@ border-radius: 50px;
 .react-calendar__century-view__decades__decade,
 .react-calendar__decade-view__years__year{
     border: none;
-    background-color: #E7F998;
+    background-color: #F9f9f9;
     justify-content: center;
 }
 
