--- a/src/styles/HomexDiary/CheckList/CheckList.css
+++ b/src/styles/HomexDiary/CheckList/CheckList.css
@@ -1,16 +1,10 @@
 .CheckList {
-    /* float:right; */
-    /* margin-bottom: 30px; */
-    border-radius: 20px;
-    margin: 1% 1% 1% 0px;
-    border: 3px solid #7DCCAC;
-    padding: 4%;
-    width: 87%;
+    margin: 5% 1% 1% 7%;
+    width: 80%;
     height: 48.5%;
 }
 
 .list-wrapper-wide{
-  /* background-color: blue; */
   display: flex;
   flex-wrap: wrap;
   width: 100%;
@@ -38,3 +32,4 @@
 
     
 }
+
