--- a/src/styles/Contents/Category.css
+++ b/src/styles/Contents/Category.css
@@ -1,13 +1,22 @@
 
-.category-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
+.contents {
   width: 100%;
+  font-family: 'Pretendard-Regular';
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1% 1% 1% 7%;
+}
+.category-grid {
+  margin-top: 5%;
+  display: grid;
+  width: 80%;
+  grid-template-columns:1fr 1fr 1fr;
+  gap: 30px;
 }
 
 .category-item {
-  background-color: #dff0d8;
+  box-shadow: 0px 0px 15px #d9d9d9; 
   padding: 20px;
   cursor: pointer;
   border-radius: 8px;
@@ -19,6 +28,7 @@
 }
 
 .category-item:hover {
+  box-shadow: 0px 0px 15px #7dccacd7; 
   transform: scale(1.05);
 }
 
