--- a/src/styles/Contents/ContentsView.css
+++ b/src/styles/Contents/ContentsView.css
@@ -5,21 +5,20 @@
   flex-direction: column;
   align-items: center;
   max-width: 940px;
-  margin: 0 auto;
 }
 
 .contents-view .content {
-  background-color: lightgoldenrodyellow;
+  box-shadow: 0px 0px 15px #d9d9d9; 
+
   padding: 20px;
   border-radius: 12px;
   width: 100%;
   text-align: left;
   position: relative;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .contents-view h2 {
-  margin-bottom: 50px;
+  margin-bottom: 5%;
   margin-top: 0;
   color: #333;
   text-align: center;
@@ -28,7 +27,7 @@
 .back-button2 {
   position: absolute;
   top: 5px;
-  right: 104px;
+  margin-left: 100%;
   background: none;
   border: none;
   font-size: 2em;
@@ -38,10 +37,10 @@
 }
 
 .back-button2:hover {
-  background-color: #007BFF;
-  color: #fff;
+  background-color: #7dccac4a;
   border-radius: 8px;
 }
+
 
 .controls {
   display: flex;
@@ -184,7 +183,6 @@
 .overlay {
   position: absolute;
   width: 100%;
-  background-color: lightgoldenrodyellow;
   z-index: 1;
 }
 
