--- a/src/styles/Setting/SettingPage.css
+++ b/src/styles/Setting/SettingPage.css
@@ -1,21 +1,14 @@
-@font-face {
-  font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-
 .setting-page {
   position: sticky;
-  margin-top: 100px;
-  left: 550px;
-  font-family: Pretendard-Regular;
+  margin: 5% 7% ;
+  font-family: 'Pretendard-Regular';
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+
   padding: 20px;
-  width: calc(100% - 40px); 
-  max-width: 800px;
+  width: 100%; 
 }
 
 
@@ -24,7 +17,7 @@
   padding: 20px;
   border-radius: 15px;
   width: 100%;
-  max-width: 400px;
+  max-width: 40%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -47,21 +40,26 @@
 }
 
 .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 5%;
 }
 
 .form-group label {
   display: block;
+  width: 30%;
+  margin-left: 23%;
   margin-bottom: 5px;
   text-align: left;
+
 }
 
 .form-group input {
+  
   font-family: Pretendard-Regular;
-  width: 96%;
+  width: 50%;
   padding: 6px;
   border: 1px solid #ddd;
   border-radius: 5px;
+
 }
 
 .settingButton {
@@ -71,8 +69,8 @@
 
 .settingButton button {
   font-family: Pretendard-Regular;
-  width: 50%;
-  margin-top: 20px;
+  width: 20%;
+  margin-top: 5%;
   padding: 10px;
   background-color: #D4F6B9;
   border: none;
